# neo-lang

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-05-05-neo-devpack-foundation.md  2026-05-05-neo-n3-compiler-devpack-coverage.md
docs/superpowers/specs/: 2026-05-05-neo-devpack-foundation-design.md
examples/: hello_world.neo  nep17.neo
neo-compiler/: Cargo.toml
neo-compiler/src/: asm_dump.rs  ast_dump.rs  build_target.rs  devpack.rs  disasm.rs  main.rs
neo-compiler/src/codegen/: context.rs  env.rs  expr.rs  field.rs  function.rs  ir_codegen.rs  mod.rs  opt.rs  tests.rs  typecheck.rs
neo-compiler/src/codegen/expr/: assignment.rs  builtin_call.rs  builtin_function.rs  builtin_method.rs  contract_call.rs  contract_storage.rs  devpack_call.rs  literal.rs  member.rs  mod.rs  operator.rs  runtime_call.rs  stack_effect.rs  struct_call.rs  tests.rs
neo-compiler/src/codegen/ir_codegen/: analysis.rs  block_emit.rs  branch_emit.rs  builder.rs  compile.rs  mod.rs  stackify_plan.rs  tests.rs
neo-compiler/src/ir/: lower.rs  mod.rs  opt.rs
neo-compiler/src/ir/lower/: builder.rs  builtin.rs  env.rs  expr.rs  helpers.rs  mod.rs  short_circuit.rs  stmt.rs  tests.rs
neo-compiler/src/syntax/: ast.rs  lexer.rs  mod.rs  parser.rs
neo-compiler/src/typecheck/: mod.rs  tests.rs
neo-devpack/: Cargo.toml  README.md
neo-devpack/src/: analyzer.rs  api.rs  framework.rs  lib.rs  manifest.rs  native.rs  standards.rs  templates.rs  testing.rs  types.rs
neo-devpack/tests/: devpack_foundation.rs
