[package]
name = "neo-compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
clap       = { version = "4.6", features = ["derive"] }
sha2       = { version = "0.11" }
hex        = { version = "0.4" }
thiserror  = { version = "2.0" }
num_enum   = { version = "0.7" }
serde      = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
